--- a/FullStackBriefcaseFromZero/DOMMangement/index.html
+++ b/FullStackBriefcaseFromZero/DOMMangement/index.html
@@ -20,15 +20,15 @@
     </div>
     <div class="table-container">
         <table class="table" id="table-home">
-            <thead>
-                <tr>
-                    <th>Header 1</th>
-                    <th>Header 2</th>
-                    <th>Header 3</th>
+            <thead >
+                <tr >
+                    <th class="table-header">Header 1</th>
+                    <th class="table-header">Header 2</th>
+                    <th class="table-header">Header 3</th>
                 </tr>
             </thead>
-            <tbody id="list">
-                <tr>
+            <tbody class="table-tbody" id="list">
+                <tr >
                     <td>Data 1-1</td>
                     <td>Data 1-2</td>
                     <td>Data 1-3</td>
